# dxss

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  dxss.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: dxss.doctree  index.doctree
.github/workflows/: build_and_test_dxss.yml  docs.yml  tests.yml
_modules/: index.html
_modules/dxss/: gmres.html  meshes.html  precomp_time_int.html  solve_1d.html  solve_2d.html  solve_3d.html  space_time.html
_sources/: dxss.rst.txt
docs/: conf.py  index.rst
src/dxss/: GMREs.py  __init__.py  _solver_backend.py  _solvers.py  _utils.py  gmres.py  meshes.py  precomp_time_int.py  solve-1D.py  solve-2D.py  solve-3D.py  solve_1d.py  solve_2d.py  solve_3d.py  space_time.py
tests/: slab-solver-test-2D.py  slab-solver-test-3D.py  slab_solver_test_2d.py  slab_solver_test_3d.py  test_dxss.py  test_linear_algebra.py  test_slab_solver_2d.py  test_slab_solver_3d.py  test_solve_1d.py  test_solve_1d_smoke.py  test_spacetime.py  test_spacetime_parameters.py
tests/data/: solve_1d_solution.csv
